# cmake-find-sdl2

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
